[package]
name = "scatter"
version = "0.1.260403"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
incremental = false
panic = "abort"
strip = true

# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#binaries
[[bin]]
name = "sc_client"
path = "bin/sc_client.rs"

[[bin]]
name = "sc_server"
path = "bin/sc_server.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rand = "0.8"

quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pki-types = "1"
# Command Line Argument Parser: https://crates.io/crates/clap
# Features: https://docs.rs/clap/latest/clap/_features/index.html
# example: https://docs.rs/clap/latest/clap/_derive/_cookbook/git_derive/index.html
clap = { version = "4.6", features = ["derive", "string", "env", "cargo", "unicode", "wrap_help", "suggestions"] }



futures = "0.3"
num_cpus = "1.16"
base64 = "0.22"
build-time = "0.1"
directories = "6.0"
libc = { version = "0.2", features = ["extra_traits"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
cfg-if = "1"
ipnet = { version = "2.8", optional = true }


mimalloc = { version = "0.1", default-features = false, optional = true }
tcmalloc = { version = "0.3", optional = true }
jemallocator = { version = "0.5", optional = true }
snmalloc-rs = { version = "0.7", optional = true }
rpmalloc = { version = "0.2", optional = true }

byteorder = "1.4"
env_logger = "0.11"
byte_string = "1.0"
lz4_flex = "0.13.0"

